# plc_trigger_cam

./: .gitignore  README.md  pyproject.toml  run.ps1  run.sh
src/: camera.py  config.py  main.py  plc_monitor.py  settings_dialog.py
